refactor(Phase E Part 3): Remove unused-ignore from pyproject + cleanup 104 obsolete type:ignore
Phase E Part 3a: Pyproject strictness improvements
- Removed 'unused-ignore' from Tier 3 disable_error_code
- Now enforces that all type:ignore have specific error codes
- Updated note: Phase E Part 2 type:ignore cleanup complete (2026-01-25)

Phase E Part 3b: Mass cleanup of obsolete type:ignore (104 removed)
- PyQt5 stubs have significantly improved
- Removed 104 unused type:ignore comments across 31 files
- Qt attribute/type checks now work without ignores:
  * Qt.UserRole, Qt.ItemIsEnabled, Qt.AlignCenter, etc.
  * QEvent types, Qt cursors, Qt window flags
  * QTableWidget header/viewport methods
  * Qt color constants (Qt.white, Qt.transparent)
  * Qt button comparisons and bitwise operations

Kept 11 legitimate type:ignore for:
- sys._MEIPASS (PyInstaller runtime attribute)
- logger._patched_for_safe_log (dynamic patching)
- BatchProcessor(**kwargs) (dict unpacking type variance)

Metrics:
- Before: 115 type:ignore total
- Quality gates: ✓ mypy (0 errors, 548 files) ✓ ruff (all checks passed)

Files changed: 32 (31 .py + pyproject.toml)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -205,8 +205,8 @@ module = [
     "oncutf.utils.metadata.exiftool_adapter"
 ]
 ignore_errors = false
-# NOTE: Only Qt-stub-specific errors remain disabled (2026-01-20)
-# Removed from original: index (now enforced - 0 errors)
+# NOTE: Only Qt-stub-specific errors remain disabled (2026-01-25)
+# Removed: index (now enforced - 0 errors), unused-ignore (type:ignore cleanup complete)
 disable_error_code = [
     "attr-defined",       # Qt dynamic attributes (e.g. Qt.AlignCenter)
     "call-arg",           # Qt signal/slot argument mismatches
@@ -218,7 +218,6 @@ disable_error_code = [
     "assignment",         # Qt property type assignments
     "union-attr",         # Qt Optional patterns (many in widgets)
     "unreachable",        # False positives from Qt control flow
-    "unused-ignore",      # Keep until type:ignore cleanup is done
     "has-type",           # Qt forward references
     "var-annotated",      # Qt widget attributes
     "comparison-overlap", # Qt enum comparisons
