--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,6 +128,7 @@ strict_optional = true
 # ============================================================
 # Tier 2 — Controllers / Services (legacy) — GRADUAL STRICT
 # Focus areas for reducing error count
+# Phase E Part 4: Enable disallow_untyped_defs for controllers (2026-01-25)
 # ============================================================
 [[tool.mypy.overrides]]
 module = [
@@ -141,6 +142,7 @@ module = [
 ignore_errors = false
 disallow_any_generics = true
 disallow_subclassing_any = true
+disallow_untyped_defs = true  # Phase E Part 4: Enforce typed functions
 warn_return_any = false  # Too noisy for now, enable later
 
 # ============================================================
