--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,7 +94,7 @@ no_implicit_optional = true
 strict_equality = true
 show_error_codes = true
 pretty = true
-exclude = '(^|/)(backups|\.cache|temp|reports|scripts|examples)(/|$)|oncutf/ui/resources_rc\.py'
+exclude = '(^|/)(backups|\.cache|temp|reports|scripts|examples)(/|$)|oncutf/ui/resources_rc\.py|oncutf/resources_rc\.py'
 check_untyped_defs = true
 
 # NEW: Stricter defaults for all modules (2026-01-23)
