refactor: Phase 1 ANN/PTH adoption (P2-2)
- Fixed key_simplifier.py: Added return type to __init__ (ANN204)
- Added per-file ANN401 ignores for legitimate Any usage:
  - metadata_service.py (dynamic metadata values)
  - batch_service.py (generic batch operations)
- Excluded tests/**/*.py from ANN rules (test code remains loosely typed)
- All checks pass (ruff + tests)

Progress: Phase 1 complete (1/5)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -395,6 +395,11 @@ ignore = [
 "oncutf/infra/**/*.py" = []  # No ignores for infra/ layer
 # UI layer - allow Qt patterns
 "oncutf/ui/**/*.py" = ["D100", "D101", "D102", "D103"]  # Qt widgets may skip docstrings
+# Legitimate Any usage (external APIs, dynamic data)
+"oncutf/core/metadata/metadata_service.py" = ["ANN401"]  # Metadata values are truly dynamic
+"oncutf/app/services/batch_service.py" = ["ANN401"]  # Generic batch operations with dynamic kwargs
+# Tests - exclude from type annotation requirements
+"tests/**/*.py" = ["ANN"]  # Test code can remain loosely typed
 
 [tool.ruff.lint.isort]
 force-single-line = false
