refactor: Phase 2 start - Fix base_hash_worker.py pathlib (P2-2)
- Converted os.path operations to pathlib.Path in base_hash_worker.py:
  - os.path.exists/isfile/getsize → Path.exists()/is_file()/stat().st_size
  - os.path.basename() → Path.name
- Added per-file ANN401 ignore (Qt parent reference is legitimate)
- All tests pass (5/5)

Progress: Phase 2 in progress (2/5)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -398,6 +398,7 @@ ignore = [
 # Legitimate Any usage (external APIs, dynamic data)
 "oncutf/core/metadata/metadata_service.py" = ["ANN401"]  # Metadata values are truly dynamic
 "oncutf/app/services/batch_service.py" = ["ANN401"]  # Generic batch operations with dynamic kwargs
+"oncutf/core/hash/base_hash_worker.py" = ["ANN401"]  # Qt parent reference
 # Tests - exclude from type annotation requirements
 "tests/**/*.py" = ["ANN"]  # Test code can remain loosely typed
 
