--- a/pyproject.toml
+++ b/pyproject.toml
@@ -399,6 +399,7 @@ ignore = [
 "oncutf/core/metadata/metadata_service.py" = ["ANN401"]  # Metadata values are truly dynamic
 "oncutf/app/services/batch_service.py" = ["ANN401"]  # Generic batch operations with dynamic kwargs
 "oncutf/core/hash/base_hash_worker.py" = ["ANN401"]  # Qt parent reference
+"oncutf/core/file/streaming_loader.py" = ["ANN401"]  # Qt parent and service references
 # Tests - exclude from type annotation requirements
 "tests/**/*.py" = ["ANN"]  # Test code can remain loosely typed
 
