--- a/pyproject.toml
+++ b/pyproject.toml
@@ -400,6 +400,8 @@ ignore = [
 "oncutf/app/services/batch_service.py" = ["ANN401"]  # Generic batch operations with dynamic kwargs
 "oncutf/core/hash/base_hash_worker.py" = ["ANN401"]  # Qt parent reference
 "oncutf/core/file/streaming_loader.py" = ["ANN401"]  # Qt parent and service references
+"oncutf/core/file/operations_manager.py" = ["ANN401"]  # Qt parent, dynamic cache, callback
+"oncutf/core/file/load_manager.py" = ["ANN401"]  # Qt parent, FileStore duck typing
 # Tests - exclude from type annotation requirements
 "tests/**/*.py" = ["ANN"]  # Test code can remain loosely typed
 
