--- a/pyproject.toml
+++ b/pyproject.toml
@@ -402,6 +402,7 @@ ignore = [
 "oncutf/core/file/streaming_loader.py" = ["ANN401"]  # Qt parent and service references
 "oncutf/core/file/operations_manager.py" = ["ANN401"]  # Qt parent, dynamic cache, callback
 "oncutf/core/file/load_manager.py" = ["ANN401"]  # Qt parent, FileStore duck typing
+"oncutf/core/cache/advanced_cache_manager.py" = ["ANN401"]  # Generic cache values
 # Tests - exclude from type annotation requirements
 "tests/**/*.py" = ["ANN"]  # Test code can remain loosely typed
 
