refactor: Complete oncutf/core/hash/ pathlib migration (P2-2)
- hash_worker.py: 7 PTH fixes (os.path → Path)
- parallel_hash_worker.py: 7 PTH fixes
- Both workers now use Path.name, Path.stat().st_size, Path.exists()
- Added per-file ANN401 ignores (Qt parent, Protocol kwargs)

Progress: Phase 2 - oncutf/core/hash/ module COMPLETE ✅

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -399,6 +399,8 @@ ignore = [
 "oncutf/core/metadata/metadata_service.py" = ["ANN401"]  # Metadata values are truly dynamic
 "oncutf/app/services/batch_service.py" = ["ANN401"]  # Generic batch operations with dynamic kwargs
 "oncutf/core/hash/base_hash_worker.py" = ["ANN401"]  # Qt parent reference
+"oncutf/core/hash/hash_worker.py" = ["ANN401"]  # Qt parent, Protocol kwargs
+"oncutf/core/hash/parallel_hash_worker.py" = ["ANN401"]  # Qt parent
 "oncutf/core/file/streaming_loader.py" = ["ANN401"]  # Qt parent and service references
 "oncutf/core/file/operations_manager.py" = ["ANN401"]  # Qt parent, dynamic cache, callback
 "oncutf/core/file/load_manager.py" = ["ANN401"]  # Qt parent, FileStore duck typing
